additional fixes dark mode

--- a/src/components/Wishlist/wishlist.css
+++ b/src/components/Wishlist/wishlist.css
@@ -12,6 +12,20 @@
   position: relative;
 }
 
+.wishlistWrapperDark {
+  border-radius: 10px;
+  padding: 0.25rem 0.5rem;
+  background-color: #19414b;
+  opacity: 100%;
+  box-shadow: 0 0 10px #ececec;
+  height: 550px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+
 .wishAnimation {
   position: absolute;
   bottom: 10%;
